k8s/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8081
      targetPort: 8081
